🐛 Separate lightbox toggle to prevent overlapping lightbox layer

--- a/frontend/scss/components/molecules/pixi-tooltip.scss
+++ b/frontend/scss/components/molecules/pixi-tooltip.scss
@@ -14,6 +14,18 @@
     height: 30px;
     padding: 2px;
 
+    @media (min-width: 575px) {
+      display: none;
+    }
+
+    &--desktop {
+      display: none;
+
+      @media (min-width: 575px) {
+        display: block;
+      }
+    }
+
     svg {
       width: 100%;
       height: 100%;
@@ -92,12 +104,7 @@
   }
 }
 
-// amp-lightbox
-#tooltip {
-  @media (min-width: 575px) {
-    display: none;
-  }
-}
+// amp-lightbox will be shown on small screens
 .ap-m-tooltip-lightbox {
   position: absolute;
   top: 0;
